# cli-buddy

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  PopupApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: clipboard.rs  history.rs  mod.rs  monitor.rs  screenshot.rs  settings.rs  system.rs
src-tauri/src/monitor/: clipboard_watcher.rs  mod.rs
src-tauri/src/storage/: file_manager.rs  hash.rs  mod.rs  text_history.rs
src-tauri/src/tray/: mod.rs  tray_icon.rs
src/components/: SettingsPanel.tsx  StatusBar.tsx  UpdateBanner.tsx
src/components/DevTools/: DevToolsPanel.tsx
src/components/Gallery/: GalleryView.tsx  ImagePreview.tsx  TextCard.tsx  ThumbnailCard.tsx
src/components/common/: CopyButton.tsx
src/hooks/: useMonitorStatus.ts  useScreenshots.ts  useUpdateCheck.ts
src/stores/: screenshotStore.ts
src/styles/: globals.css
src/types/: index.ts
