[package]
name = "cli-buddy"
version = "0.2.0"
description = "CLI Buddy - Your CLI Companion on Windows"
authors = ["hyunsu"]
edition = "2021"

[lib]
name = "cli_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = { version = "3", features = ["image-data"] }
image = "0.25"
sha2 = "0.10"
chrono = "0.4"
dirs = "6"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
open = "5"
